# inherent

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: default_methods.rs  expand.rs  lib.rs  parse.rs
tests/: test.rs
tests/ui/: associated-type.stderr  blanket-impl.stderr  not-trait-impl.stderr  not-visible.stderr
