[package]
name = "inherent"
version = "1.0.1" # remember to update number in readme for major versions
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Make trait methods callable without the trait in scope"
documentation = "https://docs.rs/inherent"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/inherent"
rust-version = "1.31"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.75", features = ["full"] }

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
