[package]
name = "inherent"
version = "1.0.8"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
description = "Make trait methods callable without the trait in scope"
documentation = "https://docs.rs/inherent"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/inherent"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full"] }

[dev-dependencies]
rustversion = "1.0.13"
trybuild = { version = "1.0.81", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
